# internal/backend/user/api/rest.go
@@ -17,12 +17,12 @@ type Handler struct {
 	service *service.Service
 }
 
-func RegisterREST(r *gin.RouterGroup, userService *service.Service) {
+func RegisterREST(r *gin.RouterGroup, userService *service.Service, middleware *api.JWTMiddleware) {
 	group := r.Group("/user")
 
 	h := &Handler{service: userService}
 
-	group.GET("/", api.NewRoleMiddleware(user.RoleAdmin), h.GetAll)
+	group.GET("", middleware.Middleware(), api.NewRoleMiddleware(user.RoleAdmin), h.GetAll)
 	group.POST("/register", h.Register)
 }
 
@@ -36,7 +36,7 @@ func RegisterREST(r *gin.RouterGroup, userService *service.Service) {
 func (h *Handler) Register(c *gin.Context) {
 	var opts user.CreateOptions
 
-	if err := c.ShouldBindJSON(&opts); err != nil {
+	if err := c.BindJSON(&opts); err != nil {
 		c.String(http.StatusBadRequest, "can't decode request: %s", err.Error())
 		return
 	}
@@ -65,6 +65,7 @@ func (h *Handler) Register(c *gin.Context) {
 // @Produce	json
 // @Success	200
 // @Router		/user [get]
+// @Security ApiKeyAuth
 func (h *Handler) GetAll(ctx *gin.Context) {
 	users, err := h.service.GetAllUsers(ctx)
 	if err != nil {
